# skeleton-project

./: CMakeLists.txt  LICENSE
cmake/: disable_ccache.cmake  sanitizers.cmake
src/: CMakeLists.txt  config.h.in  laz_utils.h
tests/: CMakeLists.txt  test_dummy.c
